[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/doors/door.gd" type="Script" id=1]
[ext_resource path="res://textures/tiles.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 100 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 350, 0, 50, 200 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 300, 100, 50, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 50, 200 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 300, 200, 50, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 50, 200 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 350, 200, 50, 100 )

[node name="door" type="StaticBody2D" groups=[
"door",
]]
script = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( 0, 50 )
shape = SubResource( 8 )

[node name="sprites" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="blue_closed" type="Sprite" parent="sprites"]
visible = false
texture = SubResource( 1 )
offset = Vector2( 0, 50 )

[node name="blue_open" type="Sprite" parent="sprites"]
visible = false
texture = SubResource( 3 )

[node name="yellow_closed" type="Sprite" parent="sprites"]
visible = false
texture = SubResource( 4 )
offset = Vector2( 0, 50 )

[node name="yellow_open" type="Sprite" parent="sprites"]
visible = false
texture = SubResource( 5 )

[node name="red_closed" type="Sprite" parent="sprites"]
visible = false
texture = SubResource( 6 )
offset = Vector2( 0, 50 )

[node name="red_open" type="Sprite" parent="sprites"]
visible = false
texture = SubResource( 7 )

